fix: card component align with price card detail added order counter, input fill and resize image

--- a/src/components/beverage-card/beverage-card.module.scss
+++ b/src/components/beverage-card/beverage-card.module.scss
@@ -7,7 +7,7 @@
     justify-content: center; 
 }
 
-.img {
+.image {
     height: 18em;
 }
   
@@ -52,3 +52,12 @@
 // .addcartbutton {
 //   background-color: red;
 // }
+
+.priceheart {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    justify-content: space-between;
+    height: 1.5rem;
+}
